# snake-gpt

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  TODO.md
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: main.rs  rpc.rs
macros/: Cargo.toml
macros/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  rpc.rs
shared/: Cargo.toml
shared/src/: lib.rs  playground.rs
snakegpt/: Cargo.toml
snakegpt/src/: lib.rs  main.rs  openai.rs  schema.rs
snakegpt/src/openai/: completion.rs  embeddings.rs
