[workspace]
members = [
  "snakegpt",
  "frontend",
  "server",
  "shared",
]

[workspace.dependencies]
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls", "json", "gzip"] }
rusqlite = { version = "0.29.0", features = ["bundled", "load_extension"] }
serde = { version = "1.0", features = ["derive"] }
