[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20.0"
lazy_static = "1.4.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.8.1"
syn = "2.0.15"
