[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors", "fs"] }
rusqlite = { workspace = true }

snakegpt = { path = "../snakegpt" }
tower = "0.4.13"
miette = { version = "5.8.0", features = ["fancy"] }

shared = { path = "../shared" }
