[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "5.8.0"
serde = { workspace = true }
serde_json = "1.0.96"
thiserror = "1.0.40"
uuid = { version = "1.3.1", features = ["v4", "serde"] }
macros = { path = "../macros" }
strfmt = "0.2.4"
syn = "2.0.15"
