[package]
name = "snakegpt"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = { version = "1.4.0", features = ["unicode"] }
clap = { version = "4.2.1", features = ["derive"] }
miette = { version = "5.7.0", features = ["fancy"] }
reqwest = { version = "0.11.16", features = ["rustls-tls", "json", "gzip"] }
rusqlite = { version = "0.29.0", features = ["bundled", "load_extension"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
walkdir = "2.3.3"
