[package]
name = "snakegpt"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
bstr = { version = "1.4.0", features = ["unicode"] }
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.28"
indoc = "2.0.1"
itertools = "0.10.5"
miette = { version = "5.7.0", features = ["fancy"] }
reqwest = { version = "0.11.16", features = ["rustls-tls", "json", "gzip"] }
rusqlite = { version = "0.29.0", features = ["bundled", "load_extension"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
walkdir = "2.3.3"

[lib]
name = "snakegpt"
path = "src/lib.rs"

[[bin]]
name = "snakegpt-cli"
path = "src/main.rs"
